[workspace]
members = [".", "entity", "migration"]

[package]
name = "retainer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenv = "0.15.0"
env_logger = "0.11.9"
log = "0.4.29"
migration = { path = "migration" }
poise = "0.6.1"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "macros"] }
serenity = "0.12.5"
tokio = { version = "1.50.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
