[workspace]
members = [".", "entity", "migration"]

[package]
name = "retainer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenv = "0.15.0"
entity = { path = "entity" }
log = "0.4.29"
migration = { path = "migration" }
poise = "0.6.1"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "macros"] }
serenity = "0.12.5"
tokio = { version = "1.50.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
